--- a/website/templates/edit.html
+++ b/website/templates/edit.html
@@ -1,3 +1,10 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todo App</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
+</head>
 <body>
     <h1>Edit Task</h1>
     <form action="/edit/{{ todo.id }}" method="post">
